tests/paczka1/fuzzy1/13494158.err
Error in line 2: pbqckDz A508 34,6
Error in line 3: A903 A903 74,7
Error in line 17: f0pbafAK0Ug A50/ 205,2
